--- a/homebody.css
+++ b/homebody.css
@@ -5,7 +5,6 @@ table {
 }
 
 td {
-    /* border: 1px solid #ccc; */
     padding: 10px;
     text-align: left;
     width: 50%;
@@ -28,7 +27,7 @@ p {
 }
 
 input[type=button] {
-    background-color: #e2d516; /* Green */
+    background-color: #e2d516;
     color: white;
     padding: 14px 20px;
     margin: 8px 0;
@@ -40,5 +39,5 @@ input[type=button] {
 }
 
 input[type=button]:hover {
-    background-color: #e4e66e; /* Green */
+    background-color: #e4e66e; 
 }
