--- a/login1.css
+++ b/login1.css
@@ -1,7 +1,6 @@
 body {
     background-color: rgb(241, 221, 108);
     background-size: cover;
-    font-family: Arial, sans-serif;
 }
 
 h1 {
@@ -56,18 +55,18 @@ input[type='submit']:hover {
 }
 
 button {
-    background-color: #fbffc9; /* Set the background color of the button */
-    color: rgb(0, 0, 0); /* Set the text color */
-    padding: 14px 20px; /* Add some padding to the button */
-    margin: 8px 0; /* Add some margin to the button */
-    border: none; /* Remove the border */
-    cursor: pointer; /* Change the cursor to a pointer on hover */
-    width: 100%; /* Make the button take the full width of its container */
-    font-size: 20px; /* Increase the font size of the text */
-    text-align: center; /* Center the text inside the button */
-    transition: background-color 0.3s ease; /* Add a transition effect when the background color changes */
+    background-color: #fbffc9; 
+    color: rgb(0, 0, 0); 
+    padding: 14px 20px; 
+    margin: 8px 0; 
+    border: none; 
+    cursor: pointer; 
+    width: 100%; 
+    font-size: 20px; 
+    text-align: center; 
+    transition: background-color 0.3s ease; 
   }
   
   button:hover {
-    background-color: #ecffed; /* Change the background color on hover */
+    background-color: #ecffed; 
   }
