--- a/menubarstyle.css
+++ b/menubarstyle.css
@@ -1,53 +1,37 @@
 .contact-info {
-    background-color: #eff1e7; /* Set the background color of the contact-info */
-    padding: 10px; /* Add some padding to the contact-info */
-    display: flex; /* Display the contact-info as a flex container */
-    align-items: center; /* Center the contact-info items vertically */
-    justify-content: space-between; /* Align the contact-info items to the space-between */
-    color: rgb(0, 0, 0); /* Change the color of the text */
+    background-color: #eff1e7; 
+    padding: 10px; 
+    display: flex; 
+    align-items: center; 
+    justify-content: space-between; 
+    color: rgb(0, 0, 0); 
     height: 25px;
     font-size: 12px;
   }
 
   nav {
-    background-color: #f0edcc; /* Set the background color of the navbar */
-    padding: 10px; /* Add some padding to the navbar */
-    display: flex; /* Display the navbar as a flex container */
-    align-items: center; /* Center the navbar items vertically */
+    background-color: #e7e3a0; 
+    padding: 10px; 
+    display: flex; 
+    align-items: center; 
   }
   
   nav ul {
-    display: flex; /* Display the list items as a flex container */
-    justify-content: flex-end; /* Align the list items to the right side */
-    margin: 0; /* Remove the default margin */
+    display: flex; 
+    justify-content: flex-end; 
+    margin: 0; 
   }
   
   nav ul li {
-    margin-left: 200px; /* Add some space between the list items */
+    margin-left: 200px; 
   }
   
   nav ul li a {
-    color: rgb(0, 0, 0); /* Set the text color of the links */
-    text-decoration: none; /* Remove the underline from the links */
-    font-size: 20px; /* Increase the font size of the links */
+    color: rgb(0, 0, 0); 
+    text-decoration: none;
+    font-size: 20px;
   }
   
   nav ul li a:hover {
-    color: #717171; /* Change the text color of the links on hover */
+    color: #717171; 
   }
-
-  input[type=button] {
-    background-color: #4CAF50; /* Green */
-    color: white;
-    padding: 14px 20px;
-    margin: 8px 0;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    font-size: 16px;
-    font-family: 'Open Sans', sans-serif;
-}
-
-input[type=button]:hover {
-    background-color: #3e8e41; /* Green */
-}
